# dinkum

./: .gitignore  Makefile  README.md  output-btp-csv.py  pyproject.toml  run.sh  simple.py  simple2.py  simple3.py
.github/workflows/: build-book.yml  build-test.yml
book/: 0-getting-started.ipynb  1-positive-feedback.ipynb  2-simple-oscillation.ipynb  _config.yml  _toc.yml  custom-logistic-activator.ipynb  custom-logistic-multiactivator.ipynb  custom-logistic-repressor2.ipynb  intro.md
dinkum/: __init__.py  observations.py  vfg.py  vfn.py
doc/: conf.py  index.md  index.rst
notebooks/: 0-getting-started.ipynb  000-gene-line-drawing-foo.ipynb  1-positive-feedback.ipynb  2-simple-oscillation.ipynb  4-double-negative-gate.ipynb  5-intermediate-custom-logic.ipynb  6-decay-example.ipynb  6-multi-level-activation.ipynb  7-fit-functions.ipynb  9-advanced-examples.ipynb  basic-drawing.ipynb  basic-features.ipynb  briscoe-shh-repression.ipynb  getting-started.ipynb  sea-urchin-double-negative.ipynb  terrible-urchin.ipynb
notebooks/experimental/: sea-urchin-double-negative.ipynb
notebooks/images/: 2-oscillator-signal.btp  2-oscillator.btp  6-decay-basic.btp  6-decay-repressor.btp  7-multi-level-activation.btp
src/dinkum/: __init__.py  exceptions.py  observations.py  vfg.py  vfg2.py  vfg_functions.py  vfn.py
src/dinkum/display/: __init__.py  draw_ipycanvas.py  draw_pillow.py  (+1 more)
src/tests/: test_bad_conditions.py  test_custom_2.py  test_custom_activation_fn.py  test_misc.py  test_output_btp.py  test_python_api.py  test_receptor.py  test_simple.py  test_vfg_functions.py
